Fix break in pre on Mobile Safari

--- a/assets/css/text.scss
+++ b/assets/css/text.scss
@@ -16,6 +16,12 @@
     }
 }
 
+@mixin break {
+    word-wrap: normal;
+    overflow-wrap: normal;
+    word-break: normal;
+}
+
 img {
     border: 1px solid #000;
     max-width: 100%;
@@ -83,6 +89,7 @@ img {
         background: #f5f5f5;
         padding: 0.5em 1em;
 
+        @include break();
         @include scrollbar();
 
         code {
@@ -171,8 +178,8 @@ img {
 
     .dataframe {
         border: none;
-        white-space: nowrap;
 
+        @include break();
         @include scrollbar();
 
         tr {
